
file(GLOB_RECURSE HEADER_FILES "*.h" "*.hpp")
file(GLOB_RECURSE SOURCE_FILES "*.cpp")

source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${HEADER_FILES} ${SOURCE_FILES})
add_executable(${NAME_TOPOMENDER} ${HEADER_FILES} ${SOURCE_FILES})
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(${NAME_TOPOMENDER} PUBLIC 
${CURRENT_SRC} 
${CURRENT_INCLUDE} 
)

ADD_DEFINITIONS(-D_SILENCE_STDEXT_HASH_DEPRECATION_WARNINGS)
ADD_DEFINITIONS(-D_AFXDLL)

set_property(SOURCE AssemblyInfo.cpp APPEND PROPERTY COMPILE_FLAGS "/clr /EHa")
set_property(SOURCE OcTree.cpp APPEND PROPERTY COMPILE_FLAGS "/clr /EHa")

if(CMAKE_CXX_FLAGS_DEBUG MATCHES "/RTC1")
   string(REPLACE "/RTC1" " " CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
   message("CMAKE_CXX_FLAGS_DEBUG:${CMAKE_CXX_FLAGS_DEBUG}")
endif()