

file(GLOB_RECURSE HEADER_FILES "*.h" "*.hpp")
file(GLOB_RECURSE SOURCE_FILES "*.cpp")

source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${HEADER_FILES} ${SOURCE_FILES})
add_executable(${NAME_MENDIT} ${HEADER_FILES} ${SOURCE_FILES})
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(${NAME_MENDIT} PUBLIC 
${CURRENT_SRC} 
${CURRENT_INCLUDE} 
)
ADD_DEFINITIONS(-D_SILENCE_STDEXT_HASH_DEPRECATION_WARNINGS)
